2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* Result.pm (add_error): Support for |value|-segment marking.

2008-08-22  Wakaba  <wakaba@suika.fam.cx>

	* Result.pm (add_error): Localize "description" link.

2008-08-17  Wakaba  <wakaba@suika.fam.cx>

	* Output.pm: |text/x-h2h| added.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* Output.pm (nl_text): We can finally get rid of a quirk.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* Input.pm (Subdocument new): Invoke superclass's new method
	such that |urls| attribute is initialized.

	* Result.pm (add_error): Use ->url attribute to obtain
	the URL of the document.  No longer output |text| argument,
	since all error types except for those used in the WebIDL module
	are now defined in the catalog.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* Output.pm (start_section): Don't add item to the non-tab
	navigation menu if the item's rank is higher than 2.

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* Result.pm (add_error): Pass |value| argument, if any,
	to the |nl_text| for error type texts.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* Output.pm (xref_text): New method.
	(node_link): Don't make node path consumed by catalog
	engine.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* Output.pm (nl_text): New rule, <var>{value}</var>,
	is implemented.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* Output.pm: |fieldset| end tag no longer necessary.

	* Result.pm: Link to "#parse-errors" if there are
	encoding layer errors.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* Input.pm (generate_transfer_sections): Use standard
	error list methods for transfer errors.  Typos fixed.

	* Output.pm (has_error): New attribute.
	(start_error_list, end_error_list): Support for role "transfer-errors".
	(end_error_list): Generate "no error found" paragraph if it should be.
	(generate_input_section): Decode parameters as UTF-8.

	* Result.pm (add_error): Set |has_error| flag.  Use catalog
	for "Unknown location" message.