@@ -126,8 +126,9 @@ applied.
   <td>Same as <code>object</code> <code>type</code> [HTML5]
   <tr><td><code>param</code><td><code>type</code>
   <td>Same as <code>object</code> <code>type</code> [HTML5]
-  <tr><td><code>div</code>, <code>h1</code>, <code>h2</code>, <code>h3</code>,
-  <code>h4</code>, <code>h5</code>, <code>h6</code>, or <code>p</code>
+  <tr><td><code>address</code>, <code>div</code>, <code>h1</code>,
+  <code>h2</code>, <code>h3</code>, <code>h4</code>, <code>h5</code>,
+  <code>h6</code>, or <code>p</code>
   <td><code>align</code>
   <td>Enumerated attribute [HTML5]
   <tr><td><code>img</code> or <code>object</code><td><code>align</code>
